# backend_aura

./: .gitignore  API.md  Dockerfile  README.md  database.py  dependencies.py  docker-compose.yml  force_download_ambience.py  history.json  main.py  mcp_manager.py  pyproject.toml  requirements.txt  test_audiogen.py
docs/: API_REFERENCE.md
migrations/: env.py
migrations/versions/: 3cc4cefa49b4_add_details_to_voices.py  4334aaf6ed27_add_api_key_to_user.py  4f612694d415_seed_initial_voices_data.py  58f0b253ae63_add_role_to_user.py  7936759c4ac5_add_default_voice_to_user.py  96b925f4350e_add_mcp_servers_table.py  ca3551695d68_add_email_to_users.py
routers/: chat.py  chat.py.bak  openai.py  users.py  voice.py
voices/: metadata.json
